--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noUnusedParameters": true,
     "outDir": "./dist",
     "sourceMap": true,
-    "types": ["node", "ws"],
+    "types": ["node", "ws", "node-fetch"],
     "declaration": true,
     "noUnusedLocals": true,
     "removeComments": false,
