--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "declaration": true,
     "noUnusedLocals": true,
     "removeComments": false,
-    "target": "ES2019"
+    "target": "ES2019",
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
