casing is important according to vscode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "declaration": true,
     "noUnusedLocals": true,
     "removeComments": false,
-    "target": "esnext",
+    "target": "ESNext",
     "resolveJsonModule": true
   },
   "exclude": [
