--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "alwaysStrict": true,
     "strict": true,
-    "lib": ["esnext"],
+    "lib": ["ESNext"],
     "module": "commonjs",
     "noUnusedParameters": true,
     "outDir": "./dist",
