--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noUnusedLocals": true,
     "removeComments": false,
     "target": "ESNext",
+    "incremental": true,
     "resolveJsonModule": true
   },
   "exclude": [
