--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^13.7.4",
-    "@types/node-fetch": "^2.5.4",
+    "@types/node-fetch": "^2.5.5",
     "@types/ws": "^7.2.1",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
-    "ava": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
+    "ava": "^3.5.0",
     "eslint": "^6.8.0",
     "eslint-config-klasa": "dirigeants/klasa-lint",
     "nyc": "^15.0.0",
@@ -47,5 +47,8 @@
     "fs-nextra": "^0.4.7",
     "node-fetch": "^2.6.0",
     "ws": "^7.2.1"
+  },
+  "optionalDependencies": {
+    "zlib-sync": "^0.1.6"
   }
 }
