--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
   },
   "homepage": "https://github.com/dirigeants/project-blue#readme",
   "dependencies": {
+    "@klasa/cache": "^0.0.1",
+    "@klasa/rest": "^0.0.1",
+    "@klasa/snowflake": "^0.0.1",
+    "@klasa/timer-manager": "^0.0.1",
     "@klasa/utils": "^0.0.4",
-    "abort-controller": "^3.0.0",
-    "form-data": "^3.0.0",
     "fs-nextra": "^0.4.7",
-    "node-fetch": "^2.6.0",
     "ws": "^7.2.1"
   },
   "optionalDependencies": {
