chore(Package): rename to `@klasa/core`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-blue",
+  "name": "@klasa/core",
   "version": "0.0.1",
   "description": "wip-concept",
   "main": "dist/src/index.js",
