--- a/package.json
+++ b/package.json
@@ -50,5 +50,18 @@
     "@klasa/utils": "^0.0.4",
     "@klasa/ws": "^0.0.5",
     "fs-nextra": "^0.4.7"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "files": [
+      "test/**/*.ts",
+      "!test/lib"
+    ],
+    "require": [
+      "ts-node/register",
+      "source-map-support/register"
+    ]
   }
 }
