--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,11 +64,6 @@ jobs:
         name: Windows-12
         path: .nyc_output
     - uses: actions/download-artifact@v1
-      name: Download Windows-13 Coverage Data
-      with:
-        name: Windows-13
-        path: .nyc_output
-    - uses: actions/download-artifact@v1
       name: Download Windows-14 Coverage Data
       with:
         name: Windows-14
@@ -79,11 +74,6 @@ jobs:
         name: macOS-12
         path: .nyc_output
     - uses: actions/download-artifact@v1
-      name: Download macOS-13 Coverage Data
-      with:
-        name: macOS-13
-        path: .nyc_output
-    - uses: actions/download-artifact@v1
       name: Download macOS-14 Coverage Data
       with:
         name: macOS-14
@@ -92,11 +82,6 @@ jobs:
       name: Download Linux-12 Coverage Data
       with:
         name: Linux-12
-        path: .nyc_output
-    - uses: actions/download-artifact@v1
-      name: Download Linux-13 Coverage Data
-      with:
-        name: Linux-13
         path: .nyc_output
     - uses: actions/download-artifact@v1
       name: Download Linux-14 Coverage Data
@@ -110,5 +95,5 @@ jobs:
       with:
         name: report
         path: coverage
-    - name: Test Cross Platform Coverage
-      run: yarn test:coverage
+    #- name: Test Cross Platform Coverage
+      #run: yarn test:coverage
