--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install Dependencies
       run: yarn
     - name: Run ESLint
-      uses: discordjs/action-eslint@v1
+      uses: icrawl/action-eslint@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
