--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ava",
     "test:lint": "eslint --ext ts src test",
     "test:coverage": "npx nyc check-coverage --lines 90 --functions 90 --branches 90",
-    "coverage": "npx nyc --require ts-node/register --require source-map-support/register npm test",
+    "coverage": "npx nyc --require source-map-support/register npm test",
     "coverage:report": "npx nyc report --reporter=html",
     "lint": "eslint --fix --ext ts src test",
     "docs": "typedoc"
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/dirigeants/project-blue.git"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@ava/typescript": "^1.1.1",
     "@klasa/dapi-types": "^0.1.0",
     "@types/node": "14",
     "@types/node-fetch": "^2.5.7",
@@ -31,7 +31,6 @@
     "eslint-config-klasa": "dirigeants/klasa-lint",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
-    "ts-node": "8.0.0",
     "typedoc": "^0.17.7",
     "typescript": "^4.0.0-dev.20200521"
   },
@@ -53,16 +52,14 @@
     "fs-nextra": "^0.5.1"
   },
   "ava": {
-    "extensions": [
-      "ts"
-    ],
-    "files": [
-      "test/**/*.ts",
-      "!test/lib"
-    ],
-    "require": [
-      "ts-node/register",
-      "source-map-support/register"
-    ]
+    "typescript": {
+			"extensions": [
+				"ts",
+				"tsx"
+      ],
+      "rewritePaths": {
+        "test/": "dist/test/"
+      }
+    }
   }
 }
