fix the files to test
remove the renamed test file to ignore

--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "fs-nextra": "^0.5.1"
   },
   "ava": {
+    "files": [
+      "test/**/*.ts",
+      "!test/lib"
+    ],
     "typescript": {
 			"extensions": [
 				"ts",
