--- a/package.json
+++ b/package.json
@@ -21,10 +21,6 @@
   },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
-    "@klasa/dapi-types": "^0.1.1",
-    "@types/node": "14",
-    "@types/node-fetch": "^2.5.7",
-    "@types/ws": "^7.2.4",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "ava": "^3.8.2",
@@ -44,12 +40,15 @@
   "dependencies": {
     "@klasa/bitfield": "^0.0.2",
     "@klasa/cache": "^0.0.3",
+    "@klasa/dapi-types": "^0.1.1",
     "@klasa/event-iterator": "^0.0.8",
     "@klasa/rest": "^0.4.0",
     "@klasa/snowflake": "^0.0.1",
     "@klasa/timer-manager": "^0.0.1",
     "@klasa/utils": "^0.0.8",
     "@klasa/ws": "^0.0.12",
+    "@types/node-fetch": "^2.5.7",
+    "@types/node": "^14.0.0",
     "fs-nextra": "^0.5.1"
   },
   "ava": {
