--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
     "typedoc": "^0.17.7",
-    "typescript": "^4.0.0-dev.20200528"
+    "typescript": "^3.9.3"
   },
   "author": "dirigeants",
   "license": "MIT",
@@ -42,7 +42,7 @@
     "@klasa/bitfield": "^0.0.3",
     "@klasa/cache": "^0.0.3",
     "@klasa/dapi-types": "^0.2.0",
-    "@klasa/event-iterator": "^0.0.8",
+    "@klasa/event-iterator": "^0.0.10",
     "@klasa/rest": "^0.4.0",
     "@klasa/snowflake": "^0.0.1",
     "@klasa/timer-manager": "^0.0.1",
