--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ava": "^3.8.2",
     "eslint": "^6.8.0",
     "eslint-config-klasa": "dirigeants/klasa-lint",
+    "nock": "^12.0.3",
     "nyc": "^15.0.1",
     "source-map-support": "^0.5.19",
     "typedoc": "^0.17.7",
@@ -48,8 +49,8 @@
     "@klasa/timer-manager": "^0.0.1",
     "@klasa/utils": "^0.0.8",
     "@klasa/ws": "^0.0.13",
-    "@types/node-fetch": "^2.5.7",
     "@types/node": "^14.0.6",
+    "@types/node-fetch": "^2.5.7",
     "fs-nextra": "^0.5.1"
   },
   "ava": {
