--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coverage:report": "npx nyc report --reporter=html",
     "lint": "eslint --fix --ext ts src test",
     "docs": "typedoc",
-    "docs:html": "typedoc --inputFiles src --mode modules --out docs"
+    "docs:html": "typedoc --inputFiles src --mode file --out docs"
   },
   "repository": {
     "type": "git",
